--- a/src/App.css
+++ b/src/App.css
@@ -403,7 +403,7 @@ header nav {
 
 .new_ipad .mac_wrapper {
   position: absolute;
-  bottom: 10%;
+  bottom: 6%;
   left: 50%;
   transform: translate(-50%, -5%);
   -webkit-transform: translate(-50%, -5%);
@@ -1090,5 +1090,64 @@ header nav {
     font-size: 17px;
     text-align: center;
     margin: 4px 0;
+  }
+
+  .power {
+    position: relative;
+    background: var(--dark);
+    color: var(--white);
+    background-image: url("./images/mobile_mac.jpg");
+    background-size: 802px 586px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .imac {
+    position: relative;
+    background: #f2f2f2;
+    color: var(--black);
+    background-image: url("./images/mobile_imac.jpg");
+    background-size: 340px 386px;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .arcade {
+    position: relative;
+    background: #f2f2f2;
+    color: var(--white);
+    background-image: url("./images/mobile_arcade.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .Amount .hero_pc {
+    max-width: 2200px;
+    height: 433px;
+    width: 100%;
+    margin: 8px 0;
+    background-image: url("./images/mobile_amo.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 796px 312px;
   }
 }
